crates/rs_html_parser/tests/snapshots/html5lib_test3_test__tests__lt_1_gen_1.snap
---
source: crates/rs_html_parser/tests/html5lib_test3_test.rs
expression: "parser_test(r####\"<1\"####)"
---
[
    Token {
        data: "<1",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
