crates/rs_html_parser/tests/snapshots/html5lib_test3_test__tests__lt_9.snap
---
source: crates/rs_html_parser/tests/html5lib_test3_test.rs
expression: "parser_test(r####\"</9\"####)"
---
[
    Token {
        data: "9",
        attrs: None,
        kind: Comment,
        is_implied: false,
    },
    Token {
        data: "",
        attrs: None,
        kind: CommentEnd,
        is_implied: false,
    },
]
