crates/rs_html_parser/tests/snapshots/html5lib_test3_test__tests__lt_a1_gt.snap
---
source: crates/rs_html_parser/tests/html5lib_test3_test.rs
expression: "parser_test(r####\"<a1>\"####)"
---
[
    Token {
        data: "a1",
        attrs: None,
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "a1",
        attrs: None,
        kind: CloseTag,
        is_implied: true,
    },
]
